0.1.5
-----
1. Better image grid sizing.
2. Set A..Z group size to 10.
3. Show signal strength in Information dialog.
4. If lose server connection, display modal dialog (similar to when there are no
   players) until connection is re-established.
5. Allow "PlayAll" / "AddAll" for radio.
6. Fix multi-artist retrievel in now playing.

0.1.4
-----
1. When obtaining A..Z lists, pass all orig params (e.g. artist role)
2. Don't add playall/addall entries to A..Z groups.
3. For A..Z group, set max combined group size to 100, and don't split letters
   into multiple groups until 301 or more.
4. Retreive biographies for all artists in now playing info.
5. Change sync dialog to be 'Choose players to sync with $PLAYER'
6. Add link to trackinfo command in now playing info.
7. Adjust metrics in manager payers dialog, and only show prev/next buttons if
   screen is 500px or wider.
8. Add multiple item selection to browse and queue.

0.1.3
-----
 1. Fix virtual library handling.
 2. Fix now playing info backdrop for mobile layout.
 3. Change A..Z group sizes. For 500 or less items, size is 50. For 5000 or
    less, size is 100. For 10000 or less, size is 200. Otherwise size is 300
 4. Add support for remote libraries.
 5. Alter link text colour to improve legibility.
 6. Allow setting of active player from Manager Players dialog.
 7. Add toggle button to control whether info in now playing dialog should stay
    in sync with song changes.
 8. Use virtual library ID for A..Z grouping.
 9. Add playall/addall entries to song lists.
10. Move sync control to manage players dialog.
11. Fix desktop volume when change players.

0.1.2
-----
 1. Use _50x50_o for list covers, and _300x300_f for grid covers.
 2. Add scaled image to slideshow list, and only fetch full sized image when
    slideshow active.
 3. Crop list images as per grid images.
 4. Add bitrate and file type to now playing.
 5. Only show year if >0
 6. Add tooltip to grid view items.