@@ -3,10 +3,12 @@
 1. Better image grid sizing.
 2. Set A..Z group size to 10.
 3. Show signal strength in Information dialog.
-4. If lose server connection, display modal dialog (similar to when there are no
-   players) until connection is re-established.
+4. If lose server connection, display modal dialog (similar to when there are
+   no players) until connection is re-established.
 5. Allow "PlayAll" / "AddAll" for radio.
 6. Fix multi-artist retrievel in now playing.
+7. Store command used to populate list, so that it can be re-used when
+   fetching more.
 
 0.1.4
 -----
